# py-hydroweb

./: .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  README_TECH.md  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
py_hydroweb/: client.py
tests/: __init__.py
