[metadata]
name = py hydroweb
version = 1.0.1


[flake8]
# ANN101	Missing type annotation for self in method
# ANN102	Missing type annotation for cls in classmethod
# ANN206	Missing return type annotation for classmethod
ignore = E203, E266, E501, W503, ANN101, ANN102, ANN206, W0603
max-line-length = 20
max-complexity = 18
select = B,C,E,F,W,T4
inline-quotes = "
multiline-quotes = """
docstring-quotes = """
suppress-none-returning = True

